// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChimeSettings /> spec renders the component 1`] = `
<div
  style="max-width: 700px;"
>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Executable
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
            data-test-subj="create-channel-active-response-executable-name"
            id="random_html_id"
            placeholder="Executable"
            type="text"
            value="test.exe"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        <span>
          Extra arguments - 
          <i
            style="font-weight: normal;"
          >
            optional
          </i>
        </span>
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <textarea
        class="euiTextArea euiTextArea--resizeVertical euiTextArea--fullWidth euiTextArea--compressed"
        data-test-subj="create-channel-active-response-extra-args"
        id="random_html_id"
        placeholder="Extra arguments"
        rows="3"
        style="height: 4.1rem;"
      >
        --test
      </textarea>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Type
      </label>
       
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-hidden="true"
          aria-label="Info"
          class="euiIcon euiIcon--medium euiIcon-isLoading"
          focusable="true"
          height="16"
          role="img"
          tabindex="0"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiSuperSelect"
      >
        <div
          class="euiPopover__anchor"
        >
          <div>
            <input
              id="random_html_id"
              type="hidden"
              value="stateful"
            />
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <span
                  class="euiScreenReaderOnly"
                  id="random_html_id"
                >
                  Select an option: Stateful, is selected
                </span>
                <button
                  aria-haspopup="true"
                  aria-labelledby="random_html_id random_html_id"
                  class="euiSuperSelectControl euiSuperSelectControl--fullWidth euiSuperSelectControl--compressed"
                  data-test-subj="create-channel-active-response-type"
                  type="button"
                >
                  Stateful
                </button>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    class="euiFormControlLayoutCustomIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Stateful timeout (seconds)
      </label>
       
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-hidden="true"
          aria-label="Info"
          class="euiIcon euiIcon--medium euiIcon-isLoading"
          focusable="true"
          height="16"
          role="img"
          tabindex="0"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            class="euiFieldNumber euiFieldNumber--fullWidth euiFieldNumber--compressed"
            data-test-subj="create-channel-active-response-timeout"
            id="random_html_id"
            min="0"
            placeholder="Timeout in seconds"
            type="number"
            value="60"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Location
      </label>
       
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-hidden="true"
          aria-label="Info"
          class="euiIcon euiIcon--medium euiIcon-isLoading"
          focusable="true"
          height="16"
          role="img"
          tabindex="0"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiSuperSelect"
      >
        <div
          class="euiPopover__anchor"
        >
          <div>
            <input
              id="random_html_id"
              type="hidden"
              value="defined-agent"
            />
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <span
                  class="euiScreenReaderOnly"
                  id="random_html_id"
                >
                  Select an option: Defined agent, is selected
                </span>
                <button
                  aria-haspopup="true"
                  aria-labelledby="random_html_id random_html_id"
                  class="euiSuperSelectControl euiSuperSelectControl--fullWidth euiSuperSelectControl--compressed"
                  data-test-subj="create-channel-active-response-location"
                  type="button"
                >
                  Defined agent
                </button>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    class="euiFormControlLayoutCustomIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiIcon-isLoading euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Agent ID
      </label>
       
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-hidden="true"
          aria-label="Info"
          class="euiIcon euiIcon--medium euiIcon-isLoading"
          focusable="true"
          height="16"
          role="img"
          tabindex="0"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5.277 10.088c.02.014.04.03.057.047.582.55 1.134.812 1.666.812.586 0 1.84-.293 3.713-.88L9 6.212V2H7v4.212l-1.723 3.876Zm-.438.987L3.539 14h8.922l-1.32-2.969C9.096 11.677 7.733 12 7 12c-.74 0-1.463-.315-2.161-.925ZM6 2H5V1h6v1h-1v4l3.375 7.594A1 1 0 0 1 12.461 15H3.54a1 1 0 0 1-.914-1.406L6 6V2Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
            data-test-subj="create-channel-active-response-agent-id"
            id="random_html_id"
            placeholder="Enter the agent ID"
            type="text"
            value="001"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<ChimeSettings /> spec renders the component with error 1`] = `
<div
  style="max-width: 700px;"
>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="true"
        class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
        for="random_html_id"
      >
        Executable
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-error-0"
            class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
            data-test-subj="create-channel-active-response-executable-name"
            id="random_html_id"
            placeholder="Executable"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-live="polite"
        class="euiFormErrorText euiFormRow__text"
        id="random_html_id-error-0"
      >
        test error
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        <span>
          Extra arguments - 
          <i
            style="font-weight: normal;"
          >
            optional
          </i>
        </span>
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <textarea
        class="euiTextArea euiTextArea--resizeVertical euiTextArea--fullWidth euiTextArea--compressed"
        data-test-subj="create-channel-active-response-extra-args"
        id="random_html_id"
        placeholder="Extra arguments"
        rows="3"
        style="height: 4.1rem;"
      >
        --test
      </textarea>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Type
      </label>
       
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-label="Info"
          class="euiIcon euiIcon--medium"
          focusable="true"
          height="16"
          role="img"
          tabindex="0"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiSuperSelect"
      >
        <div
          class="euiPopover__anchor"
        >
          <div>
            <input
              id="random_html_id"
              type="hidden"
              value="stateful"
            />
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <span
                  class="euiScreenReaderOnly"
                  id="random_html_id"
                >
                  Select an option: Stateful, is selected
                </span>
                <button
                  aria-haspopup="true"
                  aria-labelledby="random_html_id random_html_id"
                  class="euiSuperSelectControl euiSuperSelectControl--fullWidth euiSuperSelectControl--compressed"
                  data-test-subj="create-channel-active-response-type"
                  type="button"
                >
                  Stateful
                </button>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    class="euiFormControlLayoutCustomIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                        fill-rule="non-zero"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Stateful timeout (seconds)
      </label>
       
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-label="Info"
          class="euiIcon euiIcon--medium"
          focusable="true"
          height="16"
          role="img"
          tabindex="0"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            class="euiFieldNumber euiFieldNumber--fullWidth euiFieldNumber--compressed"
            data-test-subj="create-channel-active-response-timeout"
            id="random_html_id"
            min="0"
            placeholder="Timeout in seconds"
            type="number"
            value="60"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="random_html_id"
      >
        Location
      </label>
       
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-label="Info"
          class="euiIcon euiIcon--medium"
          focusable="true"
          height="16"
          role="img"
          tabindex="0"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiPopover euiPopover--anchorDownLeft euiPopover--displayBlock euiInputPopover euiInputPopover--fullWidth euiSuperSelect"
      >
        <div
          class="euiPopover__anchor"
        >
          <div>
            <input
              id="random_html_id"
              type="hidden"
              value="defined-agent"
            />
            <div
              class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <span
                  class="euiScreenReaderOnly"
                  id="random_html_id"
                >
                  Select an option: Defined agent, is selected
                </span>
                <button
                  aria-haspopup="true"
                  aria-labelledby="random_html_id random_html_id"
                  class="euiSuperSelectControl euiSuperSelectControl--fullWidth euiSuperSelectControl--compressed"
                  data-test-subj="create-channel-active-response-location"
                  type="button"
                >
                  Defined agent
                </button>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <span
                    class="euiFormControlLayoutCustomIcon"
                  >
                    <svg
                      aria-hidden="true"
                      class="euiIcon euiIcon--small euiFormControlLayoutCustomIcon__icon"
                      focusable="false"
                      height="16"
                      role="img"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M13.069 5.157 8.384 9.768a.546.546 0 0 1-.768 0L2.93 5.158a.552.552 0 0 0-.771 0 .53.53 0 0 0 0 .759l4.684 4.61c.641.631 1.672.63 2.312 0l4.684-4.61a.53.53 0 0 0 0-.76.552.552 0 0 0-.771 0Z"
                        fill-rule="non-zero"
                      />
                    </svg>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiFormRow euiFormRow--fullWidth euiFormRow--compressed"
    id="random_html_id-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="true"
        class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
        for="random_html_id"
      >
        Agent ID
      </label>
       
      <span
        class="euiToolTipAnchor"
      >
        <svg
          aria-label="Info"
          class="euiIcon euiIcon--medium"
          focusable="true"
          height="16"
          role="img"
          tabindex="0"
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 14A6 6 0 1 1 8 2a6 6 0 0 1 0 12Zm0-1A5 5 0 1 0 8 3a5 5 0 0 0 0 10Zm-.186-1.065A.785.785 0 0 1 7 11.12c0-.48.34-.82.814-.82.475 0 .809.34.809.82 0 .475-.334.815-.809.815ZM5.9 6.317C5.96 5.168 6.755 4.4 8.048 4.4c1.218 0 2.091.759 2.091 1.8 0 .736-.36 1.304-1.03 1.707-.56.33-.717.56-.717 1.022v.305l-.1.1H7.47l-.1-.1v-.431c-.005-.646.302-1.104.987-1.514.527-.322.708-.59.708-1.047 0-.536-.416-.91-1.05-.91-.652 0-1.064.374-1.112.998l-.1.092H6l-.1-.105Z"
          />
        </svg>
      </span>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--fullWidth euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <input
            aria-describedby="random_html_id-error-0"
            class="euiFieldText euiFieldText--fullWidth euiFieldText--compressed"
            data-test-subj="create-channel-active-response-agent-id"
            id="random_html_id"
            placeholder="Enter the agent ID"
            type="text"
            value=""
          />
        </div>
      </div>
      <div
        aria-live="polite"
        class="euiFormErrorText euiFormRow__text"
        id="random_html_id-error-0"
      >
        test error
      </div>
    </div>
  </div>
</div>
`;
